--- a/css/styles.css
+++ b/css/styles.css
@@ -652,9 +652,10 @@ a {
   pointer-events: none;
 }
 .modal {
-  position: relative;
+  position: fixed;
+  padding: 72px 24px 24px;
   width: 408px;
-  height: 576px;
+  min-height: 576px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
@@ -691,12 +692,97 @@ a {
   background-color: var(--main-button-color);
 }
 .modal-title {
-  display: flex;
+  text-align: center;
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   color: var(--main-title-color);
-  padding: 72px 24px 34px 24px;
-  align-items: center;
+}
+
+.form-input {
+  padding-left: 38px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  height: 40px;
+  width: 100%;
+  transition: border 250ms var(--timing);
+}
+
+.form-label {
+}
+.form-label-container {
+  position: relative;
+  display: block;
+  transition: color 250ms var(--timing);
+}
+.form-label-name {
+  display: block;
+  margin-bottom: 4px;
+  margin-top: 8px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.form-label-svg {
+  display: block;
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  fill: var(--main-title-color);
+  transition: fill 250ms var(--timing);
+}
+.form-input:focus {
+  border-color: var(--main-button-color);
+  outline: none;
+}
+.form-input:focus + .form-label-svg {
+  fill: var(--main-button-color);
+}
+.form-input:hover {
+  border-color: var(--main-button-color);
+  outline: none;
+}
+.form-input:hover + .form-label-svg {
+  fill: var(--main-button-color);
+}
+.form-btn {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  padding: 16px 32px;
+  background: #4d5ae5;
+  color: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin: 0 auto;
+  width: 169px;
+  height: 56px;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+}
+.form-textarea {
+  padding-left: 16px;
+  padding-top: 8px;
+  width: 100%;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  transition: border 250ms var(--timing);
+  resize: none;
+}
+
+.form-textarea:focus {
+  border-color: var(--main-button-color);
+  outline: none;
+}
+
+.form-textarea:hover {
+  border-color: var(--main-button-color);
+  outline: none;
 }
