--- a/css/styles.css
+++ b/css/styles.css
@@ -817,3 +817,51 @@ a {
   text-decoration: underline;
   color: var(--main-button-color);
 }
+
+.footer-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 24px;
+  text-align: center;
+  border-radius: 4px;
+  padding: 8px 24px;
+  background: var(--main-button-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--secondary-title-color);
+}
+.subs-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--secondary-title-color);
+  margin-bottom: 16px;
+}
+.footer-subs {
+  margin-left: 80px;
+  justify-content: center;
+  align-items: center;
+}
+.footer-form {
+  display: flex;
+}
+.footer-form-input {
+}
+.footer-form-email {
+  padding: 8px 16px;
+  width: 264px;
+  height: 40px;
+  border: 1px solid;
+  border-radius: 4px;
+  color: var(--secondary-title-color);
+  background-color: transparent;
+}
+.footer-form-email::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.5;
+  color: var(--secondary-title-color);
+}
