--- a/css/styles.css
+++ b/css/styles.css
@@ -831,6 +831,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   color: var(--secondary-title-color);
+  border: none;
 }
 .subs-text {
   font-weight: 500;
@@ -864,4 +865,7 @@ a {
   font-size: 12px;
   line-height: 1.5;
   color: var(--secondary-title-color);
+}
+.footer-btn-svg {
+  margin-left: 16px;
 }
